k8s/overlays/internal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nilsholthues-web-internal
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: nilsholthues.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nilsholthues-web
                port:
                  number: 80
